Updated Public Header style

--- a/src/components/Layout/HeaderPublic.postcss
+++ b/src/components/Layout/HeaderPublic.postcss
@@ -1,8 +1,10 @@
 .header-public {
   background: var(--bg-header-color);
-
-  div {
-    color: lightpink;
+  height: var(--header-height);
+  
+  .btn-signup {
+    height: 30px;
+    padding: 0 1rem;
   }
 }
 
