Add social media button

--- a/src/pages/LoginPage.postcss
+++ b/src/pages/LoginPage.postcss
@@ -12,7 +12,17 @@
       font-size: inherit !important;
     }
     .btn-login {
+      
+      
+      
       /* @apply w-full; */
+    }
+
+    .btn-other-login{
+      width: 100%;
+      display:flex;
+      justify-content:space-between;
+
     }
   }
 }
