can log register

--- a/src/pages/RegisterFormPage.postcss
+++ b/src/pages/RegisterFormPage.postcss
@@ -1,4 +1,4 @@
-.login-page-content {
+.register-form-page-content {
   .form-container {
     max-width: 26rem;
     min-height: 75%;
@@ -12,14 +12,14 @@
     .chakra-form__label, .chakra-button {
       font-size: inherit !important;
     }
-    .btn-login {
+    .btn-signup {
       
       
       
       /* @apply w-full; */
     }
 
-    .btn-other-login{
+    .btn-other-signup{
       width: 100%;
       display:flex;
       justify-content:space-between;
