--- a/src/pages/RegisterPage.postcss
+++ b/src/pages/RegisterPage.postcss
@@ -21,6 +21,9 @@
   width:100%;
   background-color:#d11132;
   height: 190px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 .circle-box{
   width:40%
@@ -28,22 +31,32 @@
 
 }
 
-.student{
+.students{
   width:100%;
   background-color:#1469ce;
   height: 190px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
 .personal{
   width:100%;
   background-color:#ffa603;
   height: 190px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 }
 
 .professional{
+  
   width:100%;
   background-color:#27890d;;
   height: 190px;
+  display:flex;
+  justify-content:center;
+  align-items:center;
 
   
 }
@@ -69,4 +82,86 @@ p{
   font-weight: bold
   /* box-shadow: 1px 1px 1px 1px silver */
 
+}
+
+/* .type-user:hover{
+  background-color:green;
+} */
+
+.teacher-hovicon {
+  background-color:#ab0119;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size: 45px;
+  line-height: 90px;
+  cursor: pointer;
+  margin: 20px;
+  width: 60%;
+  height: 60%;
+  border-radius: 50%;
+  text-align: center;
+  position: relative;
+  text-decoration: none;
+  z-index: 1;
+  color: #fff;
+}
+
+
+
+.student-hovicon {
+  background-color:#01429f;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size: 45px;
+  line-height: 90px;
+  cursor: pointer;
+  margin: 20px;
+  width: 60%;
+  height: 60%;
+  border-radius: 50%;
+  text-align: center;
+  position: relative;
+  text-decoration: none;
+  z-index: 1;
+  color: #fff;
+}
+
+.personal-hovicon {
+  background-color:#c97a01;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size: 45px;
+  line-height: 90px;
+  cursor: pointer;
+  margin: 20px;
+  width: 60%;
+  height: 60%;
+  border-radius: 50%;
+  text-align: center;
+  position: relative;
+  text-decoration: none;
+  z-index: 1;
+  color: #fff;
+}
+
+.professional-hovicon {
+  background-color:#1c7b09;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  font-size: 45px;
+  line-height: 90px;
+  cursor: pointer;
+  margin: 20px;
+  width: 60%;
+  height: 60%;
+  border-radius: 50%;
+  text-align: center;
+  position: relative;
+  text-decoration: none;
+  z-index: 1;
+  color: #fff;
 }
