sync backend to frontend

--- a/src/pages/PersonalRegisterPage.postcss
+++ b/src/pages/PersonalRegisterPage.postcss
@@ -9,8 +9,6 @@
   @apply flex gap-4 justify-center flex-wrap;
 }
 
-
-
 .personal-type-box{
   background-color:#26086c;
   @apply mx-2 w-48;
@@ -26,11 +24,6 @@
   display:flex;
   justify-content:center;
   align-items:center;
-}
-.circle-box{
-  width:40%
-
-
 }
 
 .colleagues-or-client{
@@ -58,8 +51,6 @@
   display:flex;
   justify-content:center;
   align-items:center;
-
-  
 }
 
 .personal-type-title{
@@ -74,18 +65,14 @@ p{
 .type-user{
   display:flex;
   justify-content:center;
-  align-item:center;
+  align-items:center;
   flex-direction: column;
   width:100%;
   background-color:white;
   height:60px;
   font-size:16px;
   font-weight: bold
-  /* box-shadow: 1px 1px 1px 1px silver */
-
 }
-
-
 
 .hovicon {
   background-color:#26086c;
