--- a/src/pages/RegisterPage.postcss
+++ b/src/pages/RegisterPage.postcss
@@ -73,7 +73,7 @@ p{
 .type-user{
   display:flex;
   justify-content:center;
-  align-item:center;
+  align-items:center;
   flex-direction: column;
   width:100%;
   background-color:white;
