--- a/src/pages/TeacherRegister.postcss
+++ b/src/pages/TeacherRegister.postcss
@@ -75,7 +75,7 @@ p{
 .type-user{
   display:flex;
   justify-content:center;
-  align-item:center;
+  align-items:center;
   flex-direction: column;
   width:100%;
   background-color:white;
