edit form position

--- a/src/pages/TeacherRegister.postcss
+++ b/src/pages/TeacherRegister.postcss
@@ -13,12 +13,16 @@
 
 
 .teacher-type-box{
+  cursor: pointer;
   background-color:#26086c;
   @apply mx-2 w-48;
   &:hover {
+    background-color: #26086c;
+    
     @apply cursor-pointer ;
   }
 }
+
 
 .school{
   width:100%;
@@ -28,6 +32,7 @@
   justify-content:center;
   align-items:center;
 }
+
 .circle-box{
   width:40%
 
