edit placeholder position

--- a/src/pages/play/UserPlayerNickname.postcss
+++ b/src/pages/play/UserPlayerNickname.postcss
@@ -16,9 +16,10 @@
     display:flex;
     justify-content:center;
     flex-direction:column;
-  
   }
   
-
+  input::placeholder {           
+    text-align: center;
+  }
 }
 
